--- a/real-time-data.html
+++ b/real-time-data.html
@@ -273,8 +273,9 @@
 
         <!-- Line Chart -->
         <div class="border p-4 bg-white">
-          <div class="mb-2">
+          <div class="flex justify-between items-center mb-2">
             <strong>Percent</strong>
+            <button id="cpi-zoom-reset" class="p-2 bg-blue-600 text-white rounded-md hover:bg-blue-700">Reset Zoom</button>
           </div>
           <div style="height: 800px;">
             <canvas id="cpi-line-chart"></canvas>
@@ -1130,6 +1131,26 @@
             intersect: false
           },
           plugins: {
+            zoom: {
+              pan: {
+                enabled: true,
+                mode: 'x',
+                modifierKey: 'shift'
+              },
+              zoom: {
+                wheel: {
+                  enabled: true,
+                },
+                pinch: {
+                  enabled: true
+                },
+                mode: 'x',
+                drag: {
+                  enabled: true,
+                  backgroundColor: 'rgba(54, 162, 235, 0.2)'
+                }
+              }
+            },
             tooltip: {
               backgroundColor: 'rgba(255, 255, 255, 0.9)',
               titleColor: '#000',
@@ -1749,6 +1770,17 @@
       heatmapMonths.addEventListener('change', () => {
         console.log('Number of months changed, updating heatmap...');
         createHeatmapTable();
+      });
+    }
+
+    // CPI Line Chart zoom reset button
+    const cpiZoomReset = document.getElementById('cpi-zoom-reset');
+    if (cpiZoomReset) {
+      cpiZoomReset.addEventListener('click', () => {
+        console.log('Resetting CPI line chart zoom...');
+        if (lineChart) {
+          lineChart.resetZoom();
+        }
       });
     }
 
@@ -3018,6 +3050,8 @@
                   size: 12
                 }
               },
+              // Ensure the y-axis has enough range to display negative values
+              suggestedMin: -2, // Add some space for negative values
               grid: {
                 display: true,
                 color: 'rgba(0, 0, 0, 0.05)',
@@ -3080,18 +3114,16 @@
       const components = [
         { name: 'Personal Consumption', key: 'Personal consumption expenditures', color: 'rgba(54, 162, 235, 0.7)' },
         { name: 'Private Investment', key: 'Gross private domestic investment', color: 'rgba(255, 99, 132, 0.7)' },
-        { name: 'Government Spending', key: 'Government consumption expenditures and gross investment', color: 'rgba(255, 206, 86, 0.7)' },
-        { name: 'Net Exports', key: null, color: 'rgba(75, 192, 192, 0.7)' } // Will calculate from exports - imports
+        { name: 'Government Spending', key: 'Government consumption expenditures and gross investment', color: 'rgba(255, 206, 86, 0.7)' }
       ];
 
-      // Create datasets for each component
-      const datasets = components.map(component => {
+      // Create datasets for the positive components
+      const positiveDatasets = components.map(component => {
         const data = filteredData.map(row => {
           if (component.key) {
             return row[component.key];
           } else {
-            // For Net Exports, calculate as exports - imports
-            return row['  Exports'] - row['  Imports'];
+            return 0;
           }
         });
 
@@ -3106,7 +3138,24 @@
         };
       });
 
-      return { labels, datasets };
+      // Add Net Exports as a separate dataset that won't be stacked with the others
+      // This prevents the visual jumps when Net Exports are negative
+      const netExportsData = filteredData.map(row => {
+        return row['  Exports'] - row['  Imports'];
+      });
+
+      positiveDatasets.push({
+        label: 'Net Exports',
+        data: netExportsData,
+        backgroundColor: 'rgba(75, 192, 192, 0.7)',
+        borderColor: 'rgba(75, 192, 192, 1)',
+        borderWidth: 1,
+        pointRadius: 0,
+        fill: true,
+        stack: 'net-exports' // Separate stack for Net Exports
+      });
+
+      return { labels, datasets: positiveDatasets };
     } catch (error) {
       console.error('Error preparing GDP stacked data:', error);
       return { labels: [], datasets: [] };
