--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -78,14 +78,21 @@
             <div class="banner-overlay">
                 <div class="container mx-auto">
                     <div class="nav-links">
-                        <a href="../../index.html">Home</a>
-                        <a href="../../games.html">Games</a>
-                        <a href="../../activities/index.html">Activities</a>
-                        <a href="about.html">About</a>
-                        <a href="index.html">Play Game</a>
-                        <a href="class-game.html">Class Game</a>
-                        <a href="leaderboard.html" class="active">Leaderboard</a>
-                        <a href="statistics.html">Statistics</a>
+                        <div class="nav-links-left">
+                            <a href="../../index.html" class="nav-link">Home</a>
+                            <a href="../../games.html" class="nav-link">Games</a>
+                            <a href="index.html" class="nav-link">Play Game</a>
+                            <a href="leaderboard.html" class="nav-link active">Leaderboard</a>
+                        </div>
+                        <div class="nav-links-right">
+                            <div class="user-info" id="user-info-container">
+                                <div class="user-avatar">
+                                    <i class="fas fa-user"></i>
+                                </div>
+                                <span class="user-name" id="user-name-display">Guest</span>
+                                <button class="sign-out-btn" id="sign-out-btn">Sign Out</button>
+                            </div>
+                        </div>
                     </div>
                     <h1 class="activity-title">Investment Odyssey</h1>
                     <p class="activity-date">Leaderboard - See how your investment skills compare to others!</p>
@@ -403,6 +410,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="../../js/firebase-auth-config.js?v=2"></script>
+
+    <!-- Header Authentication Script -->
+    <script src="js/header-auth.js"></script>
 
     <!-- Service Fallback to ensure Service is available -->
     <script src="js/service-fallback.js"></script>
