--- a/activities/index.html
+++ b/activities/index.html
@@ -174,26 +174,22 @@
 
         <!-- Games Section -->
         <h2 class="text-2xl font-semibold mt-12 mb-6">Economics Games</h2>
-        <div class="bg-gradient-to-r from-purple-600 to-indigo-600 rounded-lg shadow-lg overflow-hidden mb-8 text-white">
+        <div class="bg-gradient-to-r from-blue-600 to-teal-600 rounded-lg shadow-lg overflow-hidden mb-8 text-white">
             <div class="p-8">
                 <div class="flex flex-col md:flex-row items-center justify-between">
                     <div class="mb-6 md:mb-0 text-center md:text-left">
-                        <h2 class="text-3xl font-bold mb-3">Investment Odyssey</h2>
-                        <p class="text-white text-opacity-90 text-lg mb-4">Navigate financial markets and build your investment portfolio in this interactive simulation game</p>
+                        <h2 class="text-3xl font-bold mb-3">Interactive Economics Games</h2>
+                        <p class="text-white text-opacity-90 text-lg mb-4">Explore our collection of interactive economics games and simulations designed to reinforce key concepts</p>
                         <div class="flex flex-wrap gap-2 justify-center md:justify-start">
-                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Investment Strategies</span>
-                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Financial Markets</span>
-                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Risk Management</span>
+                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Investment Simulation</span>
+                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Market Dynamics</span>
+                            <span class="text-xs px-3 py-1 rounded-full bg-white bg-opacity-20 text-white">Economic Decision-Making</span>
                         </div>
                     </div>
-                    <div class="flex flex-col sm:flex-row gap-3">
-                        <a href="investment-odyssey/about.html" class="flex items-center justify-center bg-white text-purple-700 hover:bg-gray-100 font-bold py-3 px-6 rounded-lg transition-colors">
-                            <i class="fas fa-chart-line mr-2"></i>
-                            Play Investment Odyssey
-                        </a>
-                        <a href="../games.html" class="flex items-center justify-center bg-purple-500 bg-opacity-50 hover:bg-opacity-70 text-white font-medium py-3 px-6 rounded-lg border border-white border-opacity-30 transition-colors">
+                    <div>
+                        <a href="../games.html" class="flex items-center justify-center bg-white text-blue-700 hover:bg-gray-100 font-bold py-3 px-6 rounded-lg transition-colors">
                             <i class="fas fa-gamepad mr-2"></i>
-                            Games Home
+                            Go to Games Home
                         </a>
                     </div>
                 </div>
