--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -174,6 +174,7 @@
                             <a href="leaderboard.html" class="nav-link">Leaderboard</a>
                         </div>
                         <div class="nav-links-right">
+                            <!-- User info (shown when logged in) -->
                             <div class="user-info" id="user-info-container">
                                 <div class="user-avatar">
                                     <i class="fas fa-user"></i>
@@ -181,6 +182,12 @@
                                 <span class="user-name" id="user-name-display">Guest</span>
                                 <button class="sign-out-btn" id="sign-out-btn">Sign Out</button>
                             </div>
+
+                            <!-- Sign in link (shown when not logged in) -->
+                            <a href="../../games.html" class="nav-link" id="sign-in-link">Sign In</a>
+
+                            <!-- Guest link (shown when not logged in) -->
+                            <a href="#" class="nav-link" id="guest-link">Continue as Guest</a>
                         </div>
                     </div>
                     <h1 class="activity-title">Investment Odyssey</h1>
