--- a/activities/investment-odyssey/about.html
+++ b/activities/investment-odyssey/about.html
@@ -122,8 +122,8 @@
                             <a href="#" class="nav-link" id="guest-link">Continue as Guest</a>
                         </div>
                     </div>
-                    <h1 class="activity-title">About Investment Odyssey</h1>
-                    <p class="activity-date">Understanding the market simulation</p>
+                    <h1 class="activity-title">Investment Odyssey</h1>
+                    <p class="activity-date">Practice your investment skills in this simulation</p>
                 </div>
             </div>
         </div>
