--- a/games.html
+++ b/games.html
@@ -200,6 +200,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="js/firebase-auth-config.js"></script>
+
+    <!-- Authentication Scripts -->
+    <script src="js/auth.js"></script>
     <script src="js/games.js"></script>
 
     <!-- Bootstrap Scripts -->
