--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -658,6 +658,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="../../js/firebase-auth-config.js?v=2"></script>
 
+    <!-- Authentication Scripts -->
+    <script src="../../js/auth.js"></script>
+
     <!-- Header Authentication Script -->
     <script src="js/header-auth.js"></script>
 
