--- a/activities/investment-odyssey/statistics.html
+++ b/activities/investment-odyssey/statistics.html
@@ -327,6 +327,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="../../js/firebase-auth-config.js?v=2"></script>
 
+    <!-- Authentication Scripts -->
+    <script src="../../js/auth.js"></script>
+
     <!-- Service Fallback to ensure Service is available -->
     <script src="js/statistics-fallback.js"></script>
 
