--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -664,8 +664,11 @@
     <!-- Header Authentication Script -->
     <script src="js/header-auth.js"></script>
 
+    <!-- Score Manager -->
+    <script src="js/score-manager.js"></script>
+
     <!-- Game Scripts -->
-    <script src="js/game-core.js?v=11"></script>
+    <script src="js/game-core.js?v=12"></script>
     <script src="js/game-ui.js?v=11"></script>
     <script src="js/game-trading.js?v=11"></script>
     <script src="js/class-game.js?v=4"></script>
