--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -587,7 +587,12 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
-    <script src="js/game-core.js?v=11"></script>
+
+    <!-- Score Manager -->
+    <script src="js/score-manager.js"></script>
+
+    <!-- Game Scripts -->
+    <script src="js/game-core.js?v=12"></script>
     <script src="js/game-ui.js?v=11"></script>
     <script src="js/game-trading.js?v=11"></script>
     <script>
