--- a/select-section.html
+++ b/select-section.html
@@ -150,6 +150,14 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="js/firebase-auth-config.js"></script>
+
+    <!-- Authentication Scripts -->
+    <script src="js/auth.js"></script>
+
+    <!-- Sections Cache -->
+    <script src="js/sections-cache.js"></script>
+
+    <!-- Section Selection Script -->
     <script src="js/select-section.js"></script>
 
     <!-- Bootstrap Scripts -->
