--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -665,7 +665,7 @@
     <script src="js/header-auth.js"></script>
 
     <!-- Score Manager -->
-    <script src="js/score-manager.js"></script>
+    <script src="js/local-storage-scores.js"></script>
 
     <!-- Game Scripts -->
     <script src="js/game-core.js?v=12"></script>
