--- a/activities/investment-odyssey/statistics.html
+++ b/activities/investment-odyssey/statistics.html
@@ -330,6 +330,9 @@
     <!-- Authentication Scripts -->
     <script src="../../js/auth.js"></script>
 
+    <!-- Score Manager -->
+    <script src="js/local-storage-scores.js"></script>
+
     <!-- Service Fallback to ensure Service is available -->
     <script src="js/statistics-fallback.js"></script>
 
