--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -589,7 +589,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
     <!-- Score Manager -->
-    <script src="js/score-manager.js"></script>
+    <script src="js/local-storage-scores.js"></script>
 
     <!-- Game Scripts -->
     <script src="js/game-core.js?v=12"></script>
