--- a/activities/investment-odyssey/leaderboard.html
+++ b/activities/investment-odyssey/leaderboard.html
@@ -424,6 +424,9 @@
     <!-- Header Authentication Script -->
     <script src="js/header-auth.js"></script>
 
+    <!-- Score Manager -->
+    <script src="js/local-storage-scores.js"></script>
+
     <!-- Service Fallback to ensure Service is available -->
     <script src="js/service-fallback.js"></script>
 
