--- a/select-section.html
+++ b/select-section.html
@@ -149,6 +149,7 @@
     <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="js/firebase-config.js"></script>
     <script src="js/firebase-auth-config.js"></script>
 
     <!-- Authentication Scripts -->
