--- a/ta-admin.html
+++ b/ta-admin.html
@@ -298,12 +298,23 @@
     <script>
         // Initialize Supabase client
         try {
-            console.log('Supabase URL:', supabaseUrl);
-            console.log('Supabase Key:', supabaseKey ? 'Key exists (not showing for security)' : 'Key is missing');
+            // Check if supabaseUrl and supabaseKey are defined
+            // If not, use hardcoded values as fallback
+            if (typeof supabaseUrl === 'undefined' || typeof supabaseKey === 'undefined') {
+                console.warn('Supabase credentials not found in env.js, using fallback values');
+                window.supabaseUrl = 'https://clyyjcjwcbbmdlccmtaa.supabase.co';
+                window.supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNseXlqY2p3Y2JibWRsY2NtdGFhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ4NTk3NDQsImV4cCI6MjA2MDQzNTc0NH0.ADHB7McgJ29pMWmLgjMZYiU9Tnk2ZodKvf4PBndmxbQ';
+            } else {
+                window.supabaseUrl = supabaseUrl;
+                window.supabaseKey = supabaseKey;
+            }
+
+            console.log('Supabase URL:', window.supabaseUrl);
+            console.log('Supabase Key:', window.supabaseKey ? 'Key exists (not showing for security)' : 'Key is missing');
 
             // Create Supabase client
             const { createClient } = supabase;
-            window.supabase = createClient(supabaseUrl, supabaseKey);
+            window.supabase = createClient(window.supabaseUrl, window.supabaseKey);
             console.log('Supabase client initialized:', window.supabase ? 'Success' : 'Failed');
         } catch (error) {
             console.error('Error initializing Supabase client:', error);
